Add DW1000, ISM330DHCX, and FTM tasks.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,10 @@ idf_component_register(
         "dw1000.c"
         "dw1000-spi.c"
         "dw1000-range.c"
+        "dw1000-task.c"
         "ism330dhcx_reg.c"
+        "ism330dhcx-task.c"
+        "ftm-task.c"
         "main.c"
     INCLUDE_DIRS ""
 )
